<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_gradient"
    tools:context=".presentation.fragments.searchCityFragment.SearchCityFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:background="@drawable/style_round_layout"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:id="@+id/textViewInputInfo"
            style="@style/SearchCityTextStyle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/text_view_input_info"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.1" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:dividerColor="@color/white"
            app:dividerInsetEnd="15dp"
            app:dividerInsetStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewInputInfo"
            app:layout_constraintVertical_bias="0.0" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputText"
            android:inputType="text"
            android:layout_width="280dp"
            android:layout_height="0dp"
            android:background="@null"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white_alpha"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/searchCityButton"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/style_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/button_search_city"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/deleteDbButton"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/style_button"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/button_delete_db"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.716" />

</androidx.constraintlayout.widget.ConstraintLayout>