<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_gradient"
    tools:context=".presentation.fragments.currentCityFragment.CurrentCityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">


        <Button
            android:id="@+id/SearchFragmentButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_search_icon" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/style_round_layout"
            android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewTime"
                            style="@style/TextStyleMainDisplay"
                            android:layout_width="120dp"
                            android:layout_height="match_parent"
                            android:gravity="bottom"
                            android:text="18:00" />

                        <TextView
                            android:id="@+id/textViewCalendar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="bottom|end"
                            android:paddingStart="0dp"
                            android:paddingEnd="10dp"
                            android:text="1 JANUARY"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        app:dividerColor="@color/white"
                        app:dividerInsetEnd="10dp"
                        app:dividerInsetStart="10dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/dayOfWeek"
                            style="@style/TextStyleMainDisplay"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="center|start"
                            android:text="SUNDAY" />

                        <com.google.android.material.divider.MaterialDivider
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            app:dividerColor="@color/white"
                            app:dividerInsetEnd="10dp"
                            app:dividerInsetStart="10dp" />

                        <TextView
                            android:id="@+id/textViewCityName"
                            style="@style/TextStyleMainDisplay"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:gravity="center|start"
                            android:text="MOSCOW" />

                    </LinearLayout>

                </LinearLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:dividerColor="@color/white"
                    app:dividerInsetEnd="10dp"
                    app:dividerInsetStart="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.25"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textViewTempValue"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center|start"
                            android:paddingStart="10dp"
                            android:paddingEnd="0dp"
                            android:text="+15"
                            android:textColor="@color/white"
                            android:textSize="36sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/imageViewWeather"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="5dp"
                            android:paddingStart="100dp"
                            android:src="@drawable/ic_ellipse" />

                    </LinearLayout>

                </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/style_round_layout"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTempFeelsLike"
                    style="@style/TextStyleCommonLeftSide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:text="@string/feels_like" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewTempFeelsLikeValue"
                    style="@style/TextStyleCommonRightSide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/style_round_layout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewWindSpeed"
                    style="@style/TextStyleCommonLeftSide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/wind_speed" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewWindSpeedValue"
                    style="@style/TextStyleCommonRightSide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/style_round_layout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewHumidity"
                    style="@style/TextStyleCommonLeftSide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/humidity" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewHumidityValue"
                    style="@style/TextStyleCommonRightSide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/style_round_layout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPressure"
                    style="@style/TextStyleCommonLeftSide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/pressure" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPressureValue"
                    style="@style/TextStyleCommonRightSide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/style_round_layout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNetworkStatus"
                    style="@style/TextStyleCommonLeftSide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="NETWORK STATUS" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewNetworkStatusValue"
                    style="@style/TextStyleCommonRightSide"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>